Set up repeatable random number generation for tests
Some of the tests fail sporadically, which makes identifying the root cause
difficult. Being able to reliably reproduce the exact conditions under which the
test fails would greatly simplify the diagnostic process.

This changes the way that Kotlin's default number generator works so that each
test runs repeatably, using `RandomSeedTestExecutionListener` to hook into the
test lifecycle.

When the test suite starts, the root seed is read from the
`COMMUNITY_PAYBACK_API_TEST_ROOT_SEED` environment variable if it is set to a
valid value, or the system time otherwise.

When a test runs, each test gets a unique but predictable seed based on the
test's name and the root seed, and a new `Random` instance with this specific
seed is used as the default RNG for that thread for the duration of that test.
Once the test is complete, it cleans up after itself so that the tests should be
parallelisable in the future.

Once the test suite is complete, a prominent message is printed to the standard
output with the value of the root seed in the case that the test run needs to be
replayed.

As an example, running the full suite of tests using
`COMMUNITY_PAYBACK_API_TEST_ROOT_SEED=9903122525291` reliably causes
`DeliusEventTelemetryIT > should track telemetry when an appointment task is
created` to fail with the error message "Credited minutes of '1 hours 0 minutes'
exceeds the remaining time required of '-1 hours -1 minutes'".